Layouts seciton is back

--- a/framework/css/theme.less
+++ b/framework/css/theme.less
@@ -1,3 +1,28 @@
+/**
+ *  Agile Toolkit CSS Framework (c) 2013-2014 v0.904
+ *  http://www4.agiletoolkit.org/css
+ *  Theme: Default
+ */
+
+@import '../less/agiletoolkit.less';
+
+
+// ==========================================================
+// Layout
+// ==========================================================
+
+// Important: list .createViewport functions in the right order based on @min and @max values otherwise styles get overridden
+.createViewport(
+	@wrapperMargin: @margin,
+	@colsGutter: @margin,
+	@cols: 12,
+	@viewportMinWidth:769px
+);
+
+.createViewport(@class: 'tablet', @viewportMaxWidth:768px, @cols:6, @colsGutter: 30px, @stackLayout:true, @wrapperMargin: 20px);
+.createViewport(@class: 'mobile', @viewportMaxWidth:479px, @cols:3, @colsGutter: 20px,  @stackLayout:true, @wrapperMargin: 20px);
+
+
 // ==========================================================
 // Typography
 // ==========================================================
@@ -72,3 +97,8 @@
 @inputFocus:           @atk-swatch-blue;
 
 @popoverArrow:        12px;
+
+
+// ==========================================================
+// Your Code Goes Here
+// ==========================================================
