--- a/playground/includes/header.jade
+++ b/playground/includes/header.jade
@@ -10,8 +10,8 @@
         ul.atk-menu-horizontal
           li
             a.atk-swatch-ink.atk-padding(href='/') Playground
-          //- li
-          //-   a.atk-swatch-ink.atk-padding(href='layouts.html') Layouts
+          li
+            a.atk-swatch-ink.atk-padding(href='layouts.html') Layouts
           li
             a.atk-swatch-ink.atk-padding(href='examples.html') Examples
       .atk-cell.atk-align-right
