--- a/playground/includes/playground-gridsystem.jade
+++ b/playground/includes/playground-gridsystem.jade
@@ -1,9 +1,7 @@
 section#grid-system
   h2 Grid System
   p
-    | Our grid system is based on 
-    a(href='http://www.gridpak.com') Gridpak
-    |  tool which allows you to add as many columns as needed. It also supports responsiveness.
+    | Our responsive grid system.
   .atk-row.atk-push-small
     .atk-col-3
       .atk-box-small .atk-col-3
@@ -20,7 +18,7 @@ section#grid-system
       .atk-box-small .atk-col-4
     .atk-col-4
       .atk-box-small .atk-col-4
-  .atk-row
+  .atk-row.atk-push-small
     .atk-col-6
       .atk-box-small .atk-col-6
     .atk-col-6
