--- a/playground/includes/playground-typography.jade
+++ b/playground/includes/playground-typography.jade
@@ -42,7 +42,7 @@ section#typography
     |  to indicate a block of quoted text.
   .atk-box
     blockquote “Nam quis bibendum erat, ut cursus leo.”
-  .atk-row
+  .atk-row.atk-push
     .atk-col-8.col
       h3 Font Scale
       p
