--- a/playground/includes/playground-widgets.jade
+++ b/playground/includes/playground-widgets.jade
@@ -12,7 +12,7 @@ section#widgets
     span.atk-label.atk-effect-info .atk-cells
     | &nbsp;components.
   #example-widgets-mediablocks.atk-box
-    .atk-row
+    .atk-row.atk-push
       .atk-col-6
         .atk-cells.atk-cells-gutter-large.atk-box.atk-swatch-green
           .atk-cell
@@ -595,7 +595,7 @@ section#widgets
           .atk-popover.atk-popover-top-right.atk-box.atk-align-center.atk-size-kilo.atk-swatch-ink
             | .atk-popover-top-right
             .atk-popover-arrow
-    .atk-row
+    .atk-row.atk-pushv
       .atk-col-4
         .atk-box
           .atk-popover.atk-popover-bottom-left.atk-box.atk-align-center.atk-size-kilo.atk-swatch-yellow
