--- a/playground/layouts.jade
+++ b/playground/layouts.jade
@@ -82,14 +82,14 @@ html(class='no-js')
                               span.atk-box.atk-inline
                         .atk-align-center.atk-size-kilo
                           a(href='layouts/centered.html') Centered
-                    .atk-col-4
-                      .atk-box-small.layout-template
-                        a.atk-box-small.atk-swatch-gray.atk-push-small(href='layouts/responsive.html')
-                          span.atk-cells
-                            .atk-cell.atk-actions.atk-valign-middle.atk-align-center.atk-text-baseline-reset(style="height:134px")
-                                span.icon-tablet.atk-size-yotta.atk-swatch-ink
-                                span.icon-laptop.atk-size-yotta.atk-swatch-ink
-                        .atk-align-center.atk-size-kilo
-                          a(href='layouts/responsive.html') Responsive
+                    //- .atk-col-4
+                    //-   .atk-box-small.layout-template
+                    //-     a.atk-box-small.atk-swatch-gray.atk-push-small(href='layouts/responsive.html')
+                    //-       span.atk-cells
+                    //-         .atk-cell.atk-actions.atk-valign-middle.atk-align-center.atk-text-baseline-reset(style="height:134px")
+                    //-             span.icon-tablet.atk-size-yotta.atk-swatch-ink
+                    //-             span.icon-laptop.atk-size-yotta.atk-swatch-ink
+                    //-     .atk-align-center.atk-size-kilo
+                    //-       a(href='layouts/responsive.html') Responsive
     include includes/scripts
     include includes/analytics
