--- a/playground/layouts/centered.html
+++ b/playground/layouts/centered.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html><!--[if lt IE 7]<html lang="en" class="no-js oldie lt-ie9 lt-ie8 lt-ie7"><![endif]-->
 <!--[if IE 7]><html lang="en" class="no-js oldie lt-ie9 lt-ie8"><![endif]-->
 <!--[if IE 8]><html lang="en" class="no-js oldie lt-ie9"><![endif]-->
-<!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]--><head><meta charset="utf-8"><!--[if IE]><!--><meta http-equiv="X-UA-Compatible" content="IE=edge"><!--[endif]--><title>Agile Toolkit CSS</title><meta name="description" content=""><link rel="stylesheet" href="../css/style-centered.css"></head><body><!--[if lt IE 8]><p class="browsehappy">You are using an <strong>outdated</strong> browser.
+<!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]--><head><meta charset="utf-8"><!--[if IE]><!--><meta http-equiv="X-UA-Compatible" content="IE=edge"><!--[endif]--><title>Agile Toolkit CSS</title><meta name="description" content=""><link rel="stylesheet" href="../css/theme-centered.css"></head><body><!--[if lt IE 8]><p class="browsehappy">You are using an <strong>outdated</strong> browser.
 Please <a href="http://browsehappy.com/">upgrade your browser</a>
 to improve your experience.</p><![endif]--><script type="text/javascript">(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 ga('create', 'UA-17702108-4');
-ga('send', 'pageview');</script><div class="atk-layout"><div class="atk-layout-row atk-layout-fluid"><div class="atk-layout atk-layout-cell"><div class="atk-layout-column atk-layout-fluid atk-valign-middle"><div class="atk-wrapper"><div class="atk-box-large"><h2>Box with content</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, harum, atque culpa quibusdam praesentium ad optio eveniet iusto veritatis laboriosam delectus obcaecati earum recusandae a eos enim magni aliquid distinctio.</p></div></div></div></div></div></div></body></html>
+ga('send', 'pageview');</script><div class="atk-layout"><div class="atk-layout-row atk-layout-fluid"><div class="atk-layout atk-layout-cell"><div class="atk-layout-column atk-valign-middle"><div class="atk-wrapper"><div class="atk-box-large"><h2>Box with content</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, harum, atque culpa quibusdam praesentium ad optio eveniet iusto veritatis laboriosam delectus obcaecati earum recusandae a eos enim magni aliquid distinctio.</p></div></div></div></div></div></div></body></html>
