--- a/playground/layouts/fixed-multicol.jade
+++ b/playground/layouts/fixed-multicol.jade
@@ -12,7 +12,7 @@ html(class='no-js')
 		<!--[endif]-->
 		title Agile Toolkit CSS
 		meta(name='description', content='')
-		link(rel='stylesheet', href='../css/style-fixed.css')
+		link(rel='stylesheet', href='../css/theme-fixed.css')
 	body
 		include ../includes/browsehappy
 		include ../includes/analytics
@@ -29,8 +29,8 @@ html(class='no-js')
 								h2 Hero Section
 						div.atk-section-large.atk-swatch-white
 							div.atk-wrapper
-								div.row
-									div.span_8.col
+								div.atk-row
+									div.atk-col-8
 										h2 Content Section
 										p
 											| Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, iure temporibus quaerat delectus dignissimos incidunt laboriosam repellat ad. Qui incidunt distinctio soluta architecto esse perspiciatis aspernatur ducimus placeat modi magni.
@@ -38,7 +38,7 @@ html(class='no-js')
 											| Morbi in mollis massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar adipiscing augue a vehicula. Cras nec quam lectus. Nulla vestibulum lacus non adipiscing viverra. Cras semper leo at metus iaculis venenatis. Morbi mollis augue nunc, ut aliquam est euismod feugiat.
 										p
 											| Vestibulum volutpat nec augue quis pretium. Etiam ullamcorper, est eget ultricies fermentum, libero nibh lobortis erat, eu ullamcorper leo lacus eget augue. Mauris ac erat placerat, volutpat lorem consequat, pulvinar sapien. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse potenti. Nulla imperdiet laoreet augue pretium posuere.
-									div.span_4.col
+									div.atk-col-4
 										div.atk-box.atk-swatch-gray
 											h2 Sidebar
 											p
