--- a/playground/css/theme-hybrid.css
+++ b/playground/css/theme-hybrid.css
@@ -2,6 +2,10 @@
  * Agile Toolkit CSS Framework (c) 2013-2014 v0.904
  *  http://www4.agiletoolkit.org/css
  */
+/**
+ * Agile Toolkit CSS Framework (c) 2013-2014 v0.904
+ *  http://www4.agiletoolkit.org/css
+ */
 @font-face {
   font-family: 'fontello';
   src: url('../font/fontello.eot?18386174');
@@ -5128,7 +5132,7 @@ label.atk-input-label em {
   margin-bottom: 0;
 }
 body {
-  background: #ffffff;
+  background: #f5f6f7;
 }
 ::selection {
   background: #1c2933;
@@ -6143,13 +6147,436 @@ img.atk-shape-circle {
   filter: blur(5px);
 }
 /* Helpers, Colors, Boxes, Buttons etc. */
-@media screen and (min-width: 769px) {
+.atk-row {
+  *zoom: 1;
+}
+.atk-row:before,
+.atk-row:after {
+  display: table;
+  content: "";
+  line-height: 0;
+  width: 100%;
+}
+.atk-row:after {
+  clear: both;
+}
+.atk-row > *[class*=atk-col] {
+  float: left;
+}
+.atk-hide,
+.atk-hide[class*=atk-layout],
+.atk-hide[class*=atk-menu].atk-menu-vertical {
+  display: none;
+}
+*[class*=atk-show-] {
+  display: none !important;
+}
+.atk-swatch-white {
+  background: #ffffff;
+  border-color: #ffffff;
+}
+.atk-swatch-white,
+a:link.atk-swatch-white,
+.atk-swatch-white:visited {
+  color: black;
+}
+.atk-swatch-white hr {
+  border-color: #000;
+}
+.atk-swatch-white a,
+.atk-swatch-white h1,
+.atk-swatch-white h2,
+.atk-swatch-white h3,
+.atk-swatch-white h4,
+.atk-swatch-white h5,
+.atk-swatch-white h6 {
+  color: black;
+}
+.atk-swatch-white[class*=icon-],
+a:link.atk-swatch-white[class*=icon-] {
+  background: none;
+  color: #ffffff;
+}
+.atk-swatch-white[class*=icon-][class*=atk-shape] {
+  color: black;
+  background: #ffffff;
+}
+.atk-swatch-white[class*=icon-]:hover {
+  background: none;
+  color: #ffffff;
+}
+a.atk-swatch-white:hover,
+.atk-swatch-white[class*=atk-button]:hover {
+  color: black;
+  background: #ffffff;
+}
+.atk-swatch-white[class*='atk-button'],
+.atk-swatch-white.atk-label,
+.atk-table td.atk-swatch-white,
+.atk-table th.atk-swatch-white,
+.atk-swatch-white > .atk-popover-arrow:before {
+  color: black;
+  background: #ffffff;
+  border-color: #ffffff;
+}
+.atk-swatch-white[class*='atk-button'] {
+  border-color: #e6e6e6;
+}
+.atk-swatch-white[class*='atk-button']:hover {
+  border-color: #e6e6e6;
+}
+*[class*=atk-menu] li:hover.atk-swatch-white > a {
+  color: black;
+}
+.atk-swatch-gray {
+  background: #f5f6f7;
+  border-color: #f5f6f7;
+}
+.atk-swatch-gray,
+a:link.atk-swatch-gray,
+.atk-swatch-gray:visited {
+  color: black;
+}
+.atk-swatch-gray hr {
+  border-color: #000;
+}
+.atk-swatch-gray a,
+.atk-swatch-gray h1,
+.atk-swatch-gray h2,
+.atk-swatch-gray h3,
+.atk-swatch-gray h4,
+.atk-swatch-gray h5,
+.atk-swatch-gray h6 {
+  color: black;
+}
+.atk-swatch-gray[class*=icon-],
+a:link.atk-swatch-gray[class*=icon-] {
+  background: none;
+  color: #f5f6f7;
+}
+.atk-swatch-gray[class*=icon-][class*=atk-shape] {
+  color: black;
+  background: #f5f6f7;
+}
+.atk-swatch-gray[class*=icon-]:hover {
+  background: none;
+  color: #f5f6f7;
+}
+a.atk-swatch-gray:hover,
+.atk-swatch-gray[class*=atk-button]:hover {
+  color: black;
+  background: #ffffff;
+}
+.atk-swatch-gray[class*='atk-button'],
+.atk-swatch-gray.atk-label,
+.atk-table td.atk-swatch-gray,
+.atk-table th.atk-swatch-gray,
+.atk-swatch-gray > .atk-popover-arrow:before {
+  color: black;
+  background: #f5f6f7;
+  border-color: #f5f6f7;
+}
+.atk-swatch-gray[class*='atk-button'] {
+  border-color: #d9dde0;
+}
+.atk-swatch-gray[class*='atk-button']:hover {
+  border-color: #d9dde0;
+}
+*[class*=atk-menu] li:hover.atk-swatch-gray > a {
+  color: black;
+}
+.atk-swatch-ink {
+  background: #1c2933;
+  border-color: #1c2933;
+}
+.atk-swatch-ink,
+a:link.atk-swatch-ink,
+.atk-swatch-ink:visited {
+  color: white;
+}
+.atk-swatch-ink hr {
+  border-color: #000;
+}
+.atk-swatch-ink a,
+.atk-swatch-ink h1,
+.atk-swatch-ink h2,
+.atk-swatch-ink h3,
+.atk-swatch-ink h4,
+.atk-swatch-ink h5,
+.atk-swatch-ink h6 {
+  color: white;
+}
+.atk-swatch-ink[class*=icon-],
+a:link.atk-swatch-ink[class*=icon-] {
+  background: none;
+  color: #1c2933;
+}
+.atk-swatch-ink[class*=icon-][class*=atk-shape] {
+  color: white;
+  background: #1c2933;
+}
+.atk-swatch-ink[class*=icon-]:hover {
+  background: none;
+  color: #1c2933;
+}
+a.atk-swatch-ink:hover,
+.atk-swatch-ink[class*=atk-button]:hover {
+  color: white;
+  background: #253643;
+}
+.atk-swatch-ink[class*='atk-button'],
+.atk-swatch-ink.atk-label,
+.atk-table td.atk-swatch-ink,
+.atk-table th.atk-swatch-ink,
+.atk-swatch-ink > .atk-popover-arrow:before {
+  color: white;
+  background: #1c2933;
+  border-color: #1c2933;
+}
+.atk-swatch-ink[class*='atk-button'] {
+  border-color: #0a0f12;
+}
+.atk-swatch-ink[class*='atk-button']:hover {
+  border-color: #0a0f12;
+}
+*[class*=atk-menu] li:hover.atk-swatch-ink > a {
+  color: white;
+}
+.atk-swatch-yellow {
+  background: #ffcc00;
+  border-color: #ffcc00;
+}
+.atk-swatch-yellow,
+a:link.atk-swatch-yellow,
+.atk-swatch-yellow:visited {
+  color: black;
+}
+.atk-swatch-yellow hr {
+  border-color: #000;
+}
+.atk-swatch-yellow a,
+.atk-swatch-yellow h1,
+.atk-swatch-yellow h2,
+.atk-swatch-yellow h3,
+.atk-swatch-yellow h4,
+.atk-swatch-yellow h5,
+.atk-swatch-yellow h6 {
+  color: black;
+}
+.atk-swatch-yellow[class*=icon-],
+a:link.atk-swatch-yellow[class*=icon-] {
+  background: none;
+  color: #ffcc00;
+}
+.atk-swatch-yellow[class*=icon-][class*=atk-shape] {
+  color: black;
+  background: #ffcc00;
+}
+.atk-swatch-yellow[class*=icon-]:hover {
+  background: none;
+  color: #ffcc00;
+}
+a.atk-swatch-yellow:hover,
+.atk-swatch-yellow[class*=atk-button]:hover {
+  color: black;
+  background: #ffd11a;
+}
+.atk-swatch-yellow[class*='atk-button'],
+.atk-swatch-yellow.atk-label,
+.atk-table td.atk-swatch-yellow,
+.atk-table th.atk-swatch-yellow,
+.atk-swatch-yellow > .atk-popover-arrow:before {
+  color: black;
+  background: #ffcc00;
+  border-color: #ffcc00;
+}
+.atk-swatch-yellow[class*='atk-button'] {
+  border-color: #cca300;
+}
+.atk-swatch-yellow[class*='atk-button']:hover {
+  border-color: #cca300;
+}
+*[class*=atk-menu] li:hover.atk-swatch-yellow > a {
+  color: black;
+}
+.atk-swatch-red {
+  background: #f9451f;
+  border-color: #f9451f;
+}
+.atk-swatch-red,
+a:link.atk-swatch-red,
+.atk-swatch-red:visited {
+  color: white;
+}
+.atk-swatch-red hr {
+  border-color: #000;
+}
+.atk-swatch-red a,
+.atk-swatch-red h1,
+.atk-swatch-red h2,
+.atk-swatch-red h3,
+.atk-swatch-red h4,
+.atk-swatch-red h5,
+.atk-swatch-red h6 {
+  color: white;
+}
+.atk-swatch-red[class*=icon-],
+a:link.atk-swatch-red[class*=icon-] {
+  background: none;
+  color: #f9451f;
+}
+.atk-swatch-red[class*=icon-][class*=atk-shape] {
+  color: white;
+  background: #f9451f;
+}
+.atk-swatch-red[class*=icon-]:hover {
+  background: none;
+  color: #f9451f;
+}
+a.atk-swatch-red:hover,
+.atk-swatch-red[class*=atk-button]:hover {
+  color: white;
+  background: #fa5a38;
+}
+.atk-swatch-red[class*='atk-button'],
+.atk-swatch-red.atk-label,
+.atk-table td.atk-swatch-red,
+.atk-table th.atk-swatch-red,
+.atk-swatch-red > .atk-popover-arrow:before {
+  color: white;
+  background: #f9451f;
+  border-color: #f9451f;
+}
+.atk-swatch-red[class*='atk-button'] {
+  border-color: #df2c06;
+}
+.atk-swatch-red[class*='atk-button']:hover {
+  border-color: #df2c06;
+}
+*[class*=atk-menu] li:hover.atk-swatch-red > a {
+  color: white;
+}
+.atk-swatch-green {
+  background: #00cc66;
+  border-color: #00cc66;
+}
+.atk-swatch-green,
+a:link.atk-swatch-green,
+.atk-swatch-green:visited {
+  color: white;
+}
+.atk-swatch-green hr {
+  border-color: #000;
+}
+.atk-swatch-green a,
+.atk-swatch-green h1,
+.atk-swatch-green h2,
+.atk-swatch-green h3,
+.atk-swatch-green h4,
+.atk-swatch-green h5,
+.atk-swatch-green h6 {
+  color: white;
+}
+.atk-swatch-green[class*=icon-],
+a:link.atk-swatch-green[class*=icon-] {
+  background: none;
+  color: #00cc66;
+}
+.atk-swatch-green[class*=icon-][class*=atk-shape] {
+  color: white;
+  background: #00cc66;
+}
+.atk-swatch-green[class*=icon-]:hover {
+  background: none;
+  color: #00cc66;
+}
+a.atk-swatch-green:hover,
+.atk-swatch-green[class*=atk-button]:hover {
+  color: white;
+  background: #00e673;
+}
+.atk-swatch-green[class*='atk-button'],
+.atk-swatch-green.atk-label,
+.atk-table td.atk-swatch-green,
+.atk-table th.atk-swatch-green,
+.atk-swatch-green > .atk-popover-arrow:before {
+  color: white;
+  background: #00cc66;
+  border-color: #00cc66;
+}
+.atk-swatch-green[class*='atk-button'] {
+  border-color: #00994d;
+}
+.atk-swatch-green[class*='atk-button']:hover {
+  border-color: #00994d;
+}
+*[class*=atk-menu] li:hover.atk-swatch-green > a {
+  color: white;
+}
+.atk-swatch-blue {
+  background: #0095ff;
+  border-color: #0095ff;
+}
+.atk-swatch-blue,
+a:link.atk-swatch-blue,
+.atk-swatch-blue:visited {
+  color: white;
+}
+.atk-swatch-blue hr {
+  border-color: #000;
+}
+.atk-swatch-blue a,
+.atk-swatch-blue h1,
+.atk-swatch-blue h2,
+.atk-swatch-blue h3,
+.atk-swatch-blue h4,
+.atk-swatch-blue h5,
+.atk-swatch-blue h6 {
+  color: white;
+}
+.atk-swatch-blue[class*=icon-],
+a:link.atk-swatch-blue[class*=icon-] {
+  background: none;
+  color: #0095ff;
+}
+.atk-swatch-blue[class*=icon-][class*=atk-shape] {
+  color: white;
+  background: #0095ff;
+}
+.atk-swatch-blue[class*=icon-]:hover {
+  background: none;
+  color: #0095ff;
+}
+a.atk-swatch-blue:hover,
+.atk-swatch-blue[class*=atk-button]:hover {
+  color: white;
+  background: #1aa0ff;
+}
+.atk-swatch-blue[class*='atk-button'],
+.atk-swatch-blue.atk-label,
+.atk-table td.atk-swatch-blue,
+.atk-table th.atk-swatch-blue,
+.atk-swatch-blue > .atk-popover-arrow:before {
+  color: white;
+  background: #0095ff;
+  border-color: #0095ff;
+}
+.atk-swatch-blue[class*='atk-button'] {
+  border-color: #0077cc;
+}
+.atk-swatch-blue[class*='atk-button']:hover {
+  border-color: #0077cc;
+}
+*[class*=atk-menu] li:hover.atk-swatch-blue > a {
+  color: white;
+}
+@media screen and (min-width: 0) {
   .atk-layout > .atk-layout-row > .atk-layout-cell {
     min-width: 100%;
   }
   .atk-wrapper {
     min-width: 0;
-    max-width: 100%;
+    max-width: 1100px;
     padding-left: 1.6rem;
     padding-right: 1.6rem;
   }
@@ -6209,136 +6636,6 @@ img.atk-shape-circle {
   }
   .atk-col-12,
   .atk-col-12[class*=atk-col] {
-    width: 100%;
-  }
-}
-@media screen and (max-width: 768px) {
-  .atk-layout > .atk-layout-row > .atk-layout-cell {
-    min-width: 100%;
-  }
-  .atk-wrapper {
-    min-width: 0;
-    max-width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .atk-row {
-    margin-left: -30px;
-  }
-  .atk-row *[class*=atk-col] {
-    border: 0px solid rgba(0, 0, 0, 0);
-    border-left-width: 30px;
-  }
-  *[class*=atk-col] {
-    width: 100%;
-  }
-  .atk-layout,
-  .atk-layout > .atk-layout-column,
-  .atk-layout .atk-layout-cell,
-  .atk-layout .atk-layout-row {
-    display: block;
-  }
-  .atk-layout .atk-layout-row {
-    height: auto;
-  }
-  *[class*=atk-menu] > li > *[class*=atk-menu] {
-    bottom: 0 !important;
-    left: 0 !important;
-    position: relative !important;
-    right: 0 !important;
-    top: 0 !important;
-  }
-  *[class*=atk-menu] > li > *[class*=atk-menu].atk-menu-horizontal > li {
-    display: block;
-    float: none;
-  }
-  *[class*=atk-menu] > li:hover > *[class*=atk-menu] {
-    display: none !important;
-  }
-  *[class*=atk-menu] > li:focus {
-    display: none !important;
-  }
-  .atk-col-1,
-  .atk-col-1[class*=atk-col] {
-    width: 16.66666667%;
-  }
-  .atk-col-2,
-  .atk-col-2[class*=atk-col] {
-    width: 33.33333333%;
-  }
-  .atk-col-3,
-  .atk-col-3[class*=atk-col] {
-    width: 50%;
-  }
-  .atk-col-4,
-  .atk-col-4[class*=atk-col] {
-    width: 66.66666667%;
-  }
-  .atk-col-5,
-  .atk-col-5[class*=atk-col] {
-    width: 83.33333333%;
-  }
-  .atk-col-6,
-  .atk-col-6[class*=atk-col] {
-    width: 100%;
-  }
-}
-@media screen and (max-width: 479px) {
-  .atk-layout > .atk-layout-row > .atk-layout-cell {
-    min-width: 100%;
-  }
-  .atk-wrapper {
-    min-width: 0;
-    max-width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .atk-row {
-    margin-left: -20px;
-  }
-  .atk-row *[class*=atk-col] {
-    border: 0px solid rgba(0, 0, 0, 0);
-    border-left-width: 20px;
-  }
-  *[class*=atk-col] {
-    width: 100%;
-  }
-  .atk-layout,
-  .atk-layout > .atk-layout-column,
-  .atk-layout .atk-layout-cell,
-  .atk-layout .atk-layout-row {
-    display: block;
-  }
-  .atk-layout .atk-layout-row {
-    height: auto;
-  }
-  *[class*=atk-menu] > li > *[class*=atk-menu] {
-    bottom: 0 !important;
-    left: 0 !important;
-    position: relative !important;
-    right: 0 !important;
-    top: 0 !important;
-  }
-  *[class*=atk-menu] > li > *[class*=atk-menu].atk-menu-horizontal > li {
-    display: block;
-    float: none;
-  }
-  *[class*=atk-menu] > li:hover > *[class*=atk-menu] {
-    display: none !important;
-  }
-  *[class*=atk-menu] > li:focus {
-    display: none !important;
-  }
-  .atk-col-1,
-  .atk-col-1[class*=atk-col] {
-    width: 33.33333333%;
-  }
-  .atk-col-2,
-  .atk-col-2[class*=atk-col] {
-    width: 66.66666667%;
-  }
-  .atk-col-3,
-  .atk-col-3[class*=atk-col] {
     width: 100%;
   }
 }
@@ -6741,28 +7038,45 @@ a.atk-swatch-blue:hover,
 *[class*=atk-menu] li:hover.atk-swatch-blue > a {
   color: white;
 }
-/* Use this less file if you want to customize your theme. */
-.atk-row {
-  *zoom: 1;
+#atk-footer {
+  border-top: 1px solid #e1e1e1;
 }
-.atk-row:before,
-.atk-row:after {
-  display: table;
-  content: "";
-  line-height: 0;
+section {
+  margin-top: 4.8rem;
+}
+section h2:first-child {
+  border-bottom: 1px solid #e1e1e1;
+  color: #c8c8c8;
+  font-weight: 300;
+}
+section:first-child {
+  margin-top: 0;
+}
+#example-swatches .row + .row {
+  margin-top: 1em;
+}
+#example-effects-box .atk-box-small {
+  margin-bottom: 0;
+}
+#example-styling-shapes .atk-padding {
+  height: 100px;
   width: 100%;
 }
-.atk-row:after {
-  clear: both;
+#example-styling-shapes .atk-padding.atk-shape-circle {
+  width: 100px;
 }
-.atk-row > *[class*=atk-col] {
-  float: left;
+#example-icons #icons-library {
+  white-space: nowrap;
 }
-.atk-hide,
-.atk-hide[class*=atk-layout],
-.atk-hide[class*=atk-menu].atk-menu-vertical {
+#example-icons #toggler {
+  display: block;
+}
+#example-icons .i-code {
   display: none;
 }
-*[class*=atk-show-] {
-  display: none !important;
+#example-widgets-mediablocks img {
+  height: 100px;
+}
+#example-widgets-popover .atk-row > .atk-col-4 > .atk-box > *[class*=atk-popover] {
+  position: relative;
 }
