--- a/playground/css/theme-hybrid.less
+++ b/playground/css/theme-hybrid.less
@@ -1,3 +1,26 @@
+
+/**
+ * Agile Toolkit CSS Framework (c) 2013-2014 v0.904
+ *  http://www4.agiletoolkit.org/css
+ */
+
+@import '/less/agiletoolkit.less';
+
+
+// ==========================================================
+// Layout
+// ==========================================================
+
+// Important: list .createViewport functions in the right order based on @min and @max values otherwise styles get overridden
+.createViewport(
+	@wrapperMargin: @margin,
+	@colsGutter: @margin,
+	@cols: 12,
+	@viewportMinWidth:0,
+	@wrapperMaxWidth:1100px
+);
+
+
 // ==========================================================
 // Typography
 // ==========================================================
@@ -20,7 +43,7 @@
 // Styles & Colors
 // ==========================================================
 
-@bodyBackground:       #fff;
+@bodyBackground:       @atk-swatch-gray;
 
 @cornerRadius:         5px;
 
@@ -72,3 +95,10 @@
 @inputFocus:           @atk-swatch-blue;
 
 @popoverArrow:        12px;
+
+
+// ==========================================================
+// Your Code Goes Here
+// ==========================================================
+
+@import 'playground.less';
