--- a/playground/includes/head.jade
+++ b/playground/includes/head.jade
@@ -5,4 +5,4 @@ head
   <!--[endif]-->
   title Agile Toolkit CSS
   meta(name='description', content='')
-  link(rel='stylesheet', href='css/style.css')
+  link(rel='stylesheet', href='css/theme.css')
