--- a/playground/layouts/centered.jade
+++ b/playground/layouts/centered.jade
@@ -12,14 +12,14 @@ html(class='no-js')
 		<!--[endif]-->
 		title Agile Toolkit CSS
 		meta(name='description', content='')
-		link(rel='stylesheet', href='../css/style-centered.css')
+		link(rel='stylesheet', href='../css/theme-centered.css')
 	body
 		include ../includes/browsehappy
 		include ../includes/analytics
 		div.atk-layout
 			div.atk-layout-row.atk-layout-fluid
 				div.atk-layout.atk-layout-cell
-					div.atk-layout-column.atk-layout-fluid.atk-valign-middle
+					div.atk-layout-column.atk-valign-middle
 						div.atk-wrapper
 							div.atk-box-large
 								h2 Box with content
