--- a/playground/layouts/fixed.jade
+++ b/playground/layouts/fixed.jade
@@ -12,7 +12,7 @@ html(class='no-js')
 		<!--[endif]-->
 		title Agile Toolkit CSS
 		meta(name='description', content='')
-		link(rel='stylesheet', href='../css/style-fixed.css')
+		link(rel='stylesheet', href='../css/theme-fixed.css')
 	body
 		include ../includes/browsehappy
 		include ../includes/analytics
