--- a/playground/layouts/fluid.jade
+++ b/playground/layouts/fluid.jade
@@ -12,7 +12,7 @@ html(class='no-js')
     <!--[endif]-->
     title Agile Toolkit CSS
     meta(name='description', content='')
-    link(rel='stylesheet', href='../css/style-fluid.css')
+    link(rel='stylesheet', href='../css/theme-fluid.css')
   body
     include ../includes/browsehappy
     include ../includes/analytics
@@ -23,19 +23,19 @@ html(class='no-js')
             h2 Header Area
       div.atk-layout-row.atk-layout-fluid
         div.atk-layout.atk-layout-cell
-          div.atk-layout-column.atk-swatch-gray.span_3
+          div.atk-layout-column.atk-swatch-gray.atk-col-3
             div.atk-padding
               h2 Left Sidebar
               p
                 | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget justo eget nisl mattis posuere eu ut neque. Aenean congue mollis est, ac viverra mauris bibendum et. Donec facilisis quam id semper accumsan. Curabitur nibh dui, lobortis nec elit et, sagittis sollicitudin magna.
-          div.atk-layout-column.atk-layout-fluid
+          div.atk-layout-column
             div.atk-wrapper.atk-padding-large
               h2 Content Area
               p
                 | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, iure temporibus quaerat delectus dignissimos incidunt laboriosam repellat ad. Qui incidunt distinctio soluta architecto esse perspiciatis aspernatur ducimus placeat modi magni.
               p
                 | Morbi in mollis massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pulvinar adipiscing augue a vehicula. Cras nec quam lectus. Nulla vestibulum lacus non adipiscing viverra. Cras semper leo at metus iaculis venenatis. Morbi mollis augue nunc, ut aliquam est euismod feugiat.
-          div.atk-layout-column.atk-swatch-gray.span_3
+          div.atk-layout-column.atk-swatch-gray.atk-col-3
             div.atk-padding
               h2 Right Sidebar
               p
