--- a/playground/index.jade
+++ b/playground/index.jade
@@ -16,6 +16,7 @@ html(class='no-js')
             .atk-wrapper.atk-section-large
               include includes/playground-gridsystem
               include includes/playground-typography
+              include includes/playground-helpers
               include includes/playground-components
               include includes/playground-forms
               include includes/playground-widgets
