--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -81,6 +81,7 @@
     >.atk-cell {
         display: table-cell;
         vertical-align: middle;
+        border-left: 0px solid transparent;
     }
     &.atk-cells-justified {
         table-layout: fixed;
@@ -104,15 +105,15 @@
 *[class*=atk-cells-gutter] {
     &.atk-cells.atk-cells-gutter-large>.atk-cell + .atk-cell,
     &.atk-cells-group.atk-cells-gutter-large>.atk-cells>.atk-cell + .atk-cell {
-        padding-left: (2em * @baselineDestroyer);
+        border-left-width: (2em * @baselineDestroyer);
     }
     &.atk-cells.atk-cells-gutter>.atk-cell + .atk-cell,
     &.atk-cells-group.atk-cells-gutter>.atk-cells>.atk-cell + .atk-cell {
-        padding-left: (1em * @baselineDestroyer);
+        border-left-width: (1em * @baselineDestroyer);
     }
     &.atk-cells.atk-cells-gutter-small>.atk-cell + .atk-cell,
     &.atk-cells-group.atk-cells-gutter-small>.atk-cells>.atk-cell + .atk-cell {
-        padding-left: (0.5em * @baselineDestroyer);
+        border-left-width: (0.5em * @baselineDestroyer);
     }
 }
 
@@ -127,6 +128,7 @@ input {
         font-weight: bold;
         line-height: @bodyBaseline;
         padding: (0.5em * @baselineDestroyer) (1em * @baselineDestroyer);
+        text-align: center;
         white-space: nowrap;
         &:hover {
             .buttonHover;
