--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -79,6 +79,13 @@ h6, small, .atk-size-milli {
 .atk-text-lead {
     line-height: @headingBaseline;
 }
+.atk-text-bold {
+    font-weight: bold;
+}
+.atk-text-normal {
+    font-weight: normal;
+    text-transform: normal;
+}
 
 
 // ==========================================================
