Fix for .atk-cells when .atk-stack is applied.

--- a/framework/less/responsive.less
+++ b/framework/less/responsive.less
@@ -105,6 +105,7 @@
     .atk-stack-@{c} {
       &, &.atk-cells, &.atk-cells>.atk-cell {
         display: block;
+        border-width: 0;
       }
       table& {
         &, >tbody, >tbody>tr, >tbody>tr>td {
