--- a/playground/index.jade
+++ b/playground/index.jade
@@ -20,6 +20,7 @@ html(class='no-js')
               include includes/playground-components
               include includes/playground-forms
               include includes/playground-widgets
+              include includes/playground-responsive
               include includes/playground-jqueryui
       include includes/footer
     include includes/scripts
