--- a/playground/includes/playground-typography.jade
+++ b/playground/includes/playground-typography.jade
@@ -76,3 +76,5 @@ section#typography
         h4 Heading h4
         h5 Heading h5
         h6 Heading h6
+  h3 Undocumented classes
+  p .atk-text-lead, .atk-text-bold, .atk-text-normal, .atk-text-dimmed, .atk-text-nowrap, .atk-text-reset, .atk-text-baseline-reset, .atk-text-ellipsis
