Added more undocumented classes.

--- a/playground/includes/playground-typography.jade
+++ b/playground/includes/playground-typography.jade
@@ -52,6 +52,8 @@ section#typography
         span.atk-label.atk-effect-info .atk-size-reset
         |  to reset font size to the default body size if necessary.
       .atk-box
+        .atk-size-yotta .atk-size-yotta
+        .atk-size-zetta .atk-size-zetta
         .atk-size-exa .atk-size-exa
         .atk-size-peta .atk-size-peta
         .atk-size-tera .atk-size-tera
