--- a/framework/less/typography.less
+++ b/framework/less/typography.less
@@ -108,6 +108,15 @@ h6, small, .atk-size-milli {
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+.atk-text-left {
+    text-align: left;
+}
+.atk-text-right {
+    text-align: right;
+}
+.atk-text-center {
+    text-align: center;
+}
 
 // ==========================================================
 // Images
