--- a/playground/includes/playground-helpers.jade
+++ b/playground/includes/playground-helpers.jade
@@ -1,7 +1,3 @@
 section#helpers
   h2 Helpers
-  p .atk-clear-fix, .atk-jackscrew, .atk-move-left, .atk-move-right, .atk-move-center, .atk-block, .atk-inline
-  h3 Cells
-  p .atk-valign-left, .atk-valign-right, .atk-valign-middle
-  h3 Text
-  p .atk-align-left, .atk-align-right, .atk-align-center
+  p .atk-clear-fix, .atk-jackscrew, .atk-move-left, .atk-move-right, .atk-move-center, .atk-block, .atk-inline, .atk-valign-left, .atk-valign-right, .atk-valign-middle
